Add: explore page for listing community projects. Includes categories and search functionality.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,14 +2,7 @@
   url: /learn/
 - title: Compilers
   url: /compilers/
-- title: Development
-  url: https://github.com/fortran-lang
-  sections:
-    - title: Proposals
-      url: https://github.com/j3-fortran/fortran_proposals
-    - title: Standard Library
-      url: https://github.com/fortran-lang/stdlib
-    - title: Package Manager
-      url: https://github.com/fortran-lang/fpm
+- title: Explore
+  url: /explore
 - title: News
   url: /news/
