--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,7 +2,7 @@
   url: /learn/
 - title: Compilers
   url: /compilers/
-- title: Explore
-  url: /explore
+- title: Packages
+  url: /packages
 - title: News
   url: /news/
