--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -617,6 +617,13 @@
   license: GNU GPL v3
   version: none
 
+- name: CaNS
+  github: p-costa/CaNS
+  description: A code for fast, massively-parallel direct numerical simulations (DNS) of canonical flows
+  categories: scientific
+  tags: fluid dynamics fluid simulation computational fluid dynamics turbulence high performance computing hpc cfd
+  version: none
+  
 
 # --- Examples / demos / templates ---
 
