--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -13,7 +13,7 @@ on:
 env:
   SRC_DIR: src
   PUBLISH_DIR: gh-pages
-  SITE_URL: https://lkedward.github.io/gh-actions-test
+  SITE_URL: https://fortran-lang.org
 
 jobs:
   build:
