--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -25,9 +25,8 @@ jobs:
     # Checkout PR branch into SRC_DIR
     - name: Checkout pr/${{github.event.issue.number}}
       run: | 
-        mkdir ${{env.SRC_DIR}}
+        git clone https://github.com/${{github.repository}} ${{env.SRC_DIR}}
         cd ${{env.SRC_DIR}}
-        git clone https://github.com/${{github.repository}}
         git fetch origin pull/${{github.event.issue.number}}/head:pr-${{github.event.issue.number}}
         git checkout pr-${{github.event.issue.number}}
     
