add f03gl and PLplot

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -382,6 +382,21 @@
 
 # --- Graphics ---
 
+- name: f03gl
+  url: http://www-stone.ch.cam.ac.uk/pub/f03gl/index.xhtml
+  description: Fortran 2003 interface to OpenGL
+  categories: graphics interfaces
+  tags: graphics interface opengl
+  license: GNU GPL v3
+  version: none
+
+- name: PLplot
+  url: http://plplot.sourceforge.net/
+  description: Library for scientific plotting
+  categories: graphics interfaces
+  tags: plot surface contour interface
+  license: GNU LGPL v3
+
 - name: pyplot-fortran
   github: jacobwilliams/pyplot-fortran
   description: For generating plots from Fortran using Python's matplotlib.pyplot
