add version field for PLplot

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -395,6 +395,7 @@
   categories: graphics interfaces
   tags: plot surface contour interface
   license: GNU LGPL v3
+  version: 5.15.0
 
 - name: pyplot-fortran
   github: jacobwilliams/pyplot-fortran
