Packages: add Truchas

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -638,7 +638,15 @@
   categories: scientific
   tags: fluid dynamics fluid simulation computational fluid dynamics turbulence high performance computing hpc cfd
   version: none
-  
+
+- name: Truchas
+  github: truchas/truchas-release
+  description: 3D Multiphysics Simulation of Metal Casting and Processing
+  categories: scientific
+  tags: fluid dynamics metal casting multiphysics hpc
+  license: BSD
+  version: 3.0.0
+
 
 # --- Examples / demos / templates ---
 
