Packages: add dftatom

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -638,7 +638,14 @@
   categories: scientific
   tags: fluid dynamics fluid simulation computational fluid dynamics turbulence high performance computing hpc cfd
   version: none
-  
+
+- name: dftatom
+  github: certik/dftatom
+  description: Routines for Radial Integration of Dirac, Schrödinger, and Poisson Equations
+  categories: scientific
+  tags: electronic structure calculations atomic
+  license: MIT
+  version: 1.0.4
 
 # --- Examples / demos / templates ---
 
