--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -644,7 +644,7 @@
   description: 3D Multiphysics Simulation of Metal Casting and Processing
   categories: scientific
   tags: fluid dynamics metal casting multiphysics hpc
-  license: BSD
+  license: BSD 3-Clause
   version: 3.0.0
 
 
