Packages: add Quantum ESPRESSO

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -608,6 +608,13 @@
   tags: quantum chemistry physics molecular dynamics metadynamics mpi cuda
   license: GNU GPL V2
 
+- name: Quantum ESPRESSO
+  github: QEF/q-e
+  description: Quantum ESPRESSO is an integrated suite of Open-Source computer codes for electronic-structure calculations and materials modeling at the nanoscale
+  categories: scientific
+  tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi
+  license: GNU GPL V2
+
 - name: NASTRAN 95
   github: nasa/NASTRAN-95
   description: NASA Structural Analysis System, a finite element analysis program (FEA) completed in the early 1970's 
