Packages: add Castro

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -608,6 +608,13 @@
   tags: quantum chemistry physics molecular dynamics metadynamics mpi cuda
   license: GNU GPL V2
 
+- name: Castro
+  github: AMReX-Astro/Castro
+  description: An adaptive mesh, astrophysical radiation hydrodynamics simulation code
+  categories: scientific
+  tags: adaptive mesh astrophysics radiation hydrogynamics
+  license: BSD 3-Clause
+
 - name: NASTRAN 95
   github: nasa/NASTRAN-95
   description: NASA Structural Analysis System, a finite element analysis program (FEA) completed in the early 1970's 
