--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -612,7 +612,7 @@
   github: AMReX-Astro/Castro
   description: An adaptive mesh, astrophysical radiation hydrodynamics simulation code
   categories: scientific
-  tags: adaptive mesh astrophysics radiation hydrogynamics
+  tags: adaptive mesh astrophysics radiation hydrodynamics
   license: BSD 3-Clause
 
 - name: NASTRAN 95
