--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -614,7 +614,7 @@
   categories: scientific
   tags: adaptive mesh astrophysics radiation hydrodynamics
   license: BSD 3-Clause
-  version: none
+  version: 20.05
 
 - name: NASTRAN 95
   github: nasa/NASTRAN-95
