--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -478,8 +478,7 @@
   description: Collection of Fortran77 subroutines designed to solve large scale eigenvalue problems.
   categories: numerical
   tags: eigenvalue eigenvector singular value decomposition svd
-  license: none
-  version: none
+  license: BSD 3-Clause
 
 - name: neural-fortran
   github: modern-fortran/neural-fortran
