Do not show the version

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -645,7 +645,7 @@
   categories: scientific
   tags: fluid dynamics metal casting multiphysics hpc
   license: BSD 3-Clause
-  version: 3.0.0
+  version: none
 
 
 # --- Examples / demos / templates ---
