Add the MESA code

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -667,6 +667,14 @@
   license: MIT
   version: 1.0.4
 
+- name: MESA
+  url: http://mesa.sourceforge.net/
+  description: Modules for Experiments in Stellar Astrophysics
+  categories: scientific
+  tags: stellar astrophysics
+  license: GNU GPL V2
+  version: 12778
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
