--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -448,10 +448,11 @@
   tags: blas linear algebra
 
 - name: LAPACK
-  github: xianyi/OpenBLAS
+  github: Reference-LAPACK/lapack
   description: Routines for numerical linear algebra
   categories: numerical
   tags: blas linear algera
+  license: BSD 3-Clause
 
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
