packages: Init QUIP

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -622,6 +622,13 @@
   tags: adaptive mesh astrophysics radiation hydrodynamics
   license: BSD 3-Clause
 
+- name: QUIP
+  github: libAtoms/QUIP
+  description: The QUIP package is a collection of software tools to carry out molecular dynamics simulations.
+  categories: scientific
+  tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi qm-mm
+  license: GNU GPL V2
+
 - name: ABINIT
   github: abinit/abinit
   description: ABINIT is a software suite to calculate the optical, mechanical, vibrational, and other observable properties of materials
