Add: link to J3 Fortran Proposals repo.

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -40,6 +40,10 @@ reference-links:
     url: https://j3-fortran.org/doc/year/18/18-007r1.pdf
     description: "J3/18-007r1 F2018, specification of the base Fortran 2018 language"
 
+  - name: "J3 Fortran Proposals"
+    url: https://github.com/j3-fortran/fortran_proposals
+    description: a repository for community collaboration on proposals for the Fortran Standards Committee
+
   - name: "J3: US Fortran Standards Committee"
     url: https://j3-fortran.org/
     description: J3 is the US National Body for the international Fortran standards committee
