--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -71,11 +71,12 @@ reference-books:
     publisher: Oxford Universtiy Press
 
   - author: Curcic, M.
-    year: 2019
-    title: "Modern Fortran: Building efficient parallel programs"
+    year: 2020
+    title: "Modern Fortran: Building Efficient Parallel Applications"
     url: https://www.manning.com/books/modern-fortran
     edition: 1st ed
-    publisher: Manning publications
+    location: Shelter Island, NY
+    publisher: Manning Publications
 
   - author: Chivers, I. and Sleightholme, J.
     year: 2018
