--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -62,7 +62,7 @@ reference-links:
 # Print books listed at the bottom of the 'Learn' landing page
 #
 reference-books:
-  - author: Michael Metcalf, John Reid, and Malcolm Cohen
+  - author: Metcalf, M., Reid, J. and Cohen M.
     year: 2018
     title: Modern Fortran Explained
     url: https://global.oup.com/academic/product/modern-fortran-explained-9780198811893
