--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -78,6 +78,14 @@ reference-books:
     location: Shelter Island, NY
     publisher: Manning Publications
 
+  - author: Markus, A.
+    year: 2012
+    title: "Modern Fortran in Practice"
+    url: https://www.cambridge.org/core/books/modern-fortran-in-practice/BC5BD23B2E478B4D457C5D6265BA9363
+    edition: 1st ed
+    location: Cambridge, UK
+    publisher: Cambridge University Press
+    
   - author: Chivers, I. and Sleightholme, J.
     year: 2018
     title: Introduction to Programming with Fortran
