Add: separate community page
For listing Fortran-lang community projects; this will hold information
on contributing, code of conduct and current contributors.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,6 +2,8 @@
   url: /learn/
 - title: Compilers
   url: /compilers/
+- title: Community
+  url: /community/
 - title: Packages
   url: /packages
 - title: News
