new page in quickstart: derived_types
1. added gitignore for directory: _site
2. added new link in _data\learing.yml
3. start writing the derived_types.md within learn\quickstart\

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -26,6 +26,7 @@ books:
       - link: /learn/quickstart/arrays_strings
       - link: /learn/quickstart/operators_control_flow
       - link: /learn/quickstart/organising_code
+      - link: /learn/quickstart/derived_types
 
 
 
