--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -27,6 +27,19 @@ books:
       - link: /learn/quickstart/operators_control_flow
       - link: /learn/quickstart/organising_code
 
+  - title: Building programs
+    description: How to use the compiler to build an executable program
+    category: Getting started
+    link: /learn/building_programs
+    pages:
+      - link: /learn/building_programs/compiling_source
+      - link: /learn/building_programs/linking_pieces
+      - link: /learn/building_programs/runtime_libraries
+      - link: /learn/building_programs/include_files
+      - link: /learn/building_programs/managing_libraries
+      - link: /learn/building_programs/build_tools
+      - link: /learn/building_programs/distributing
+
 
 
 # Web links listed at the bottom of the 'Learn' landing page
@@ -35,7 +48,7 @@ reference-links:
   - name: Fortran wiki
     url: http://fortranwiki.org/
     description: A rich collection of Fortran articles and resources in an editable wiki format
-    
+
   - name: "Fortran 2018 Standard Interpretation Document"
     url: https://j3-fortran.org/doc/year/18/18-007r1.pdf
     description: "J3/18-007r1 F2018, specification of the base Fortran 2018 language"
@@ -47,10 +60,10 @@ reference-links:
   - name: "J3: US Fortran Standards Committee"
     url: https://j3-fortran.org/
     description: J3 is the US National Body for the international Fortran standards committee
-  
+
   - name: "WG5: International Fortran Standards Committe"
     url: https://wg5-fortran.org/
-    description: 
+    description:
 
   - name: "Scivision Fortran 2018 Examples"
     url: https://github.com/scivision/fortran2018-examples
@@ -85,7 +98,7 @@ reference-books:
     edition: 1st ed
     location: Cambridge, UK
     publisher: Cambridge University Press
-    
+
   - author: Chivers, I. and Sleightholme, J.
     year: 2018
     title: Introduction to Programming with Fortran
