--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -69,7 +69,7 @@ reference-links:
     description: A github repository containing code samples for various Fortran 2018 features
     
   - name: "Doctor Fortran Blog"
-    url: https:/stevelionel.com/drfortran
+    url: https://stevelionel.com/drfortran
     description: A collection of posts on interesting or little-understood aspects of the Fortran language    
 
 
