Add: yaml file note on learn book urls.

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -75,6 +75,8 @@ reference-links:
 
 # Print books listed at the bottom of the 'Learn' landing page
 #
+#  Note: urls are publisher's site or DOI link
+#
 reference-books:
   - author: Metcalf, M., Reid, J. and Cohen M.
     year: 2018
