Add book: Brainerd, Intro to Fortran 2008 programming.

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -116,3 +116,11 @@ reference-books:
     edition: 4th ed
     location: New York
     publisher: McGraw-Hill Education
+
+  - author: Brainerd, W. S.
+    year: 2015
+    title: Guide to Fortran 2008 Programming
+    url: https://doi.org/10.1007/978-1-4471-6759-4
+    edition: 1st ed
+    location: London
+    publisher: Springer-Verlag
