Add book: Numrich, Parallel Programming with Co-arrays

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -124,3 +124,12 @@ reference-books:
     edition: 1st ed
     location: London
     publisher: Springer-Verlag
+
+  - author: Numrich, R. W.
+    year: 2018
+    title: Parallel Programming with Co-arrays
+    url: https://doi.org/10.1201/9780429437182
+    edition: 1st ed
+    location: New York
+    publisher: Chapman and Hall/CRC
+    
