Add book: Akin, OO Programming Fortran 90/95

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -132,4 +132,11 @@ reference-books:
     edition: 1st ed
     location: New York
     publisher: Chapman and Hall/CRC
-    
+
+  - author: Akin, E.
+    year: 2003
+    title: Object-Oriented Programming via Fortran 90/95
+    url: https://doi.org/10.1017/CBO9780511530111
+    edition: 1st ed
+    location: Cambridge
+    publisher: Cambridge University Press
