Add book: McCormack, Scientific Dev in Fortran

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -140,3 +140,12 @@ reference-books:
     edition: 1st ed
     location: Cambridge
     publisher: Cambridge University Press
+
+  - author: McCormack, D.
+    year: 2009
+    title: Scientific Software Development with Fortran
+    url: https://www.lulu.com/en/gb/shop/drew-mccormack/scientific-software-development-in-fortran/ebook/product-1gvmw8p6.html
+    edition: 1st ed
+    location: 
+    publisher: Lulu Press
+    
