Add book: Rouson, Scientific Software Design: OO

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -148,4 +148,12 @@ reference-books:
     edition: 1st ed
     location: 
     publisher: Lulu Press
+
+  - author: Rouson, D., Xia, J., and Xiaofeng, X.
+    year: 2014
+    title: "Scientific Software Design: The Object-Oriented Way"
+    url: https://www.cambridge.org/gb/academic/subjects/engineering/engineering-general-interest/scientific-software-design-object-oriented-way
+    edition: 2nd ed
+    location: Cambridge
+    publisher: Cambridge University Press
     
