Add book: Chirila, Modern Fortran Earth System Sciences

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -156,4 +156,12 @@ reference-books:
     edition: 2nd ed
     location: Cambridge
     publisher: Cambridge University Press
+
+  - author: Chirila, D. B., and Lohmann, G. 
+    year: 2015
+    title: Introduction to Modern Fortran for the Earth System Sciences
+    url: https://doi.org/10.1007/978-3-642-37009-0
+    edition: 1st ed
+    location: Berlin
+    publisher: Springer-Verlag
     
