Add book: Clerman, Fortran Usage and Style

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -164,4 +164,12 @@ reference-books:
     edition: 1st ed
     location: Berlin
     publisher: Springer-Verlag
+
+  - author: Clerman, N. S. and Spector, W.
+    year: 2011
+    title: "Modern Fortran: Style and Usage"
+    url: https://doi.org/10.1017/CBO9781139027687
+    edition: 1st ed
+    location: Cambridge
+    publisher: Cambridge University Press
     
