Add book: Hanson, Numerical Computing Fortran

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -173,3 +173,10 @@ reference-books:
     location: Cambridge
     publisher: Cambridge University Press
     
+  - author: Hanson, R. J. and Hopkins, T.
+    year: 2013
+    title: "Numerical Computing with Modern Fortran"
+    url: https://doi.org/10.1137/1.9781611973129.fm
+    edition: 1st ed
+    location: Philadelphia
+    publisher: SIAM
