Add book: Oliveira, Scientific Software Good Style

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -180,3 +180,11 @@ reference-books:
     edition: 1st ed
     location: Philadelphia
     publisher: SIAM
+    
+  - author: Oliveira, S. and Steward, D.
+    year: 2006
+    title: "Writing Scientific Software: A Guide to Good Style"
+    url: https://www.cambridge.org/gb/academic/subjects/computer-science/scientific-computing-scientific-software/writing-scientific-software-guide-good-style
+    edition: 1st ed
+    location: Cambridge
+    publisher: Cambridge University Press
