Add book: Kernighan, Practice of Programming

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -188,3 +188,11 @@ reference-books:
     edition: 1st ed
     location: Cambridge
     publisher: Cambridge University Press
+
+  - author: Kernighan, B. and Pike, R.
+    year: 1999
+    title: "The Practice of Programming"
+    url: https://www.oreilly.com/library/view/the-practice-of/9780133133448/
+    edition: 1st ed
+    location: Reading
+    publisher: Addison-Wesley Professional
