Fix: book author formatting.

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -78,7 +78,7 @@ reference-links:
 #  Note: urls are publisher's site or DOI link
 #
 reference-books:
-  - author: Metcalf, M., Reid, J. and Cohen M.
+  - author: Metcalf, M., Reid, J. and Cohen, M.
     year: 2018
     title: Modern Fortran Explained
     url: https://global.oup.com/academic/product/modern-fortran-explained-9780198811893
@@ -109,7 +109,7 @@ reference-books:
     edition: 4th ed
     publisher: Springer International Publishing
 
-  - author: Chapman S. J.
+  - author: Chapman, S. J.
     year: 2018
     title: Fortran for Scientists and Engineers
     url: https://www.mheducation.com/highered/product/fortran-scientists-engineers-chapman/M9780073385891.html
