--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -82,6 +82,12 @@
   categories: libraries
   tags: redo
   version: none
+ 
+- name: Futility
+  github: CASL/Futility
+  description: Fortran utilities including unit test harness, arbitrary length strings, parameter list objects, timers, geometry definitions, file wrappers, linear algebra tools, and parallel computing support
+  categories: libraries interfaces programming strings io numerical scientific
+  version: none
 
 # --- Interfaces ---
 
