Adding WHIZARD as a Fortran project.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -696,6 +696,14 @@
   license: GNU GPL V2
   version: 12778
 
+- name: WHIZARD
+  url: https://whizard.hepforge.org/
+  description: Particle Physics Monte Carlo Event Generator
+  categories: scientific
+  tags: particle physics parallel mpi monte carlo optimization sampling integration
+  license: GNU GPL V2
+  version: 2.8.4
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
