--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -674,7 +674,7 @@
   version: none
 
 - name: Truchas
-  github: truchas/truchas-release
+  url: https://gitlab.com/truchas/truchas
   description: 3D Multiphysics Simulation of Metal Casting and Processing
   categories: scientific
   tags: fluid dynamics metal casting multiphysics hpc
