--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -732,6 +732,6 @@
   github: FluidNumerics/feq-parse
   description: An equation parser class for interpreting and evaluating equations provided as strings.
   categories: strings data-types
-  tags: equation-parser
+  tags: equation parser
   version: none
   license: Apache2.0
