--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -731,7 +731,7 @@
 - name: Fortran Equation Parser
   github: FluidNumerics/feq-parse
   description: An equation parser class for interpreting and evaluating equations provided as strings.
-  categories: strings data-types
+  categories: strings io
   tags: equation parser
   version: none
   license: Apache2.0
