package_index: add FortranCallGraph
Co-authored-by: Laurence Kedward <laurence.kedward@bristol.ac.uk>

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -188,6 +188,13 @@
   tags: unit testing
   license: BSD 2-clause
 
+- name: FortranCallGraph
+  github: fortesg/fortrancallgraph
+  description: Static source code analysis tool for Fortran
+  categories: programming
+  tags:
+  license: GNU GPL v3
+
 # --- Data types ---
 
 - name: Fortran template library
