package_index: add Serialbox
Co-authored-by: Laurence Kedward <laurence.kedward@bristol.ac.uk>

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -393,6 +393,12 @@
   tags: 
   license: MIT
 
+- name: Serialbox
+  github: GridTools/serialbox
+  description: A serialization library and tools for C/C++, Python3 and Fortran
+  categories: io
+  tags: validation
+  license: "BSD 2 Clause"
 
 # --- Graphics ---
 
