Add: ADflow to package index.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -686,6 +686,13 @@
   tags: fluid dynamics fluid simulation computational fluid dynamics turbulence high performance computing hpc cfd
   version: none
 
+- name: ADflow
+  github: mdolab/adflow
+  description: A finite volume RANS solver tailored for gradient-based aerodynamic design optimization
+  categories: scientific
+  tags: simulation computational fluid dynamics automatic differentiation adjoint structured multiblock overset python hpc cfd mpi
+  license: LGPL v2
+
 - name: Truchas
   url: https://gitlab.com/truchas/truchas
   description: 3D Multiphysics Simulation of Metal Casting and Processing
