Update: CI for downloading fpm registry index. Move download to happen before Jekyll build. Also add to PRpreview CI workflow.

--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -57,6 +57,13 @@ jobs:
         sed -i '/baseurl:/d' _config.yml
         echo "baseurl: $(cat base_url)/${{env.BUILD_DIR}}" >> _config.yml
         echo "pull_request: ${{github.event.issue.number}}" >> _config.yml
+    
+    # Download latest fpm-registry index
+    - name: Download fpm-registry index
+      run: |
+        cd ${{env.SRC_DIR}}/_data
+        wget ${{env.FPM_INDEX}}
+        mv index.json fpm_registry_index.json
 
     # Run Jekyll build and copy output to PUBLISH_DIR
     - name: Build Jekyll Site
