Fix: PR workflow with fpm_index env var.

--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -14,6 +14,7 @@ env:
   SRC_DIR: src
   PUBLISH_DIR: gh-pages
   SITE_URL: https://fortran-lang.org
+  FPM_INDEX: "https://raw.githubusercontent.com/fortran-lang/fpm-registry/master/index.json"
 
 jobs:
   build:
