Add TOML-Fortran to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -448,6 +448,13 @@
   tags: validation
   license: BSD-2-Clause
 
+- name: toml-f
+  github: toml-f/toml-f
+  description: A TOML parser implementation for data serialization and deserialization in Fortran
+  categories: io
+  tags: toml
+  license: "Apache-2.0 OR MIT"
+
 # --- Graphics ---
 
 - name: f03gl
