--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -76,7 +76,7 @@ jobs:
 
     # Commit and push changes to remote/gh-pages
     - name: Commit and push to gh-pages
-      uses: EndBug/add-and-commit@master
+      uses: EndBug/add-and-commit@v4.4.0
       with:
         cwd: ${{env.PUBLISH_DIR}}
         message: "Jekyll build, preview ${{env.BUILD_DIR}} (on:pull_request)"
