--- a/.github/workflows/closePR.yml
+++ b/.github/workflows/closePR.yml
@@ -34,7 +34,7 @@ jobs:
 
     # Commit and push changes to remote/gh-pages
     - name: Commit and push to gh-pages
-      uses: EndBug/add-and-commit@master
+      uses: EndBug/add-and-commit@v4.4.0
       with:
         cwd: ${{env.PUBLISH_DIR}}
         message: "Jekyll build, cleanup pr/${{github.event.issue.number}}"
