Add DFTB+ to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -593,6 +593,13 @@
 
 # --- Scientific codes ---
 
+- name: "DFTB+"
+  github: dftbplus/dftbplus
+  description: "DFTB+ general package for performing fast atomistic simulations"
+  categories: scientific
+  license: LGPL-3.0-or-later
+  tags: tight-binding quantum-mechanics density-functional-theory
+
 - name: WRF
   github: wrf-model/WRF
   description: Weather Research and Forecasting model
