Remove check for license: none from package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -4,16 +4,16 @@
 #  'description' (mandatory) single line description
 #  'categories'  (mandatory)
 #  'tags'        (optional) used for searching. Don't include category name here.
-#  'license'     (optional) override automatic github license. Set to 'none' to hide.
+#  'license'     (optional) override automatic github license. Mandatory if automatic detection fails.
 #  'version'     (optional) override automatic github version. Set to 'none' to hide.
 #
 # Fields for non github projects:
 #  'name'        (mandatory)
 #  'url'         (mandatory)
+#  'license'     (mandatory)
 #  'description' (mandatory) single line description
 #  'categories'  (mandatory)
 #  'tags'        (optional) used for searching. Don't include category name here.
-#  'license'     (optional)
 #  'version'     (optional)
 #
 # Browsable category names (lowercase!):
