--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -728,7 +728,7 @@
 - name: xtb
   github: grimme-lab/xtb
   description: Semiempirical Extended Tight-Binding Program Package
-  categories: scrientific
+  categories: scientific
   tags: quantum-chemistry computational-chemistry atomistic-simulations
   license: LGPL-3.0-or-later
 
