Add wannier90 to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -717,6 +717,12 @@
   license: GNU GPL V2
   version: 12778
 
+- name: wannier90
+  github: wannier-developers/wannier90
+  description: The Maximally-Localised Generalised Wannier Functions Code
+  categories: scientific
+  tags: electronic-structure
+
 - name: WHIZARD
   url: https://whizard.hepforge.org/
   description: Particle Physics Monte Carlo Event Generator
