added new minibook structure

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -41,6 +41,18 @@ books:
       - link: /learn/building_programs/build_tools
       - link: /learn/building_programs/distributing
 
+  - title: Setting up your OS
+    description: How to setup a Fortran developement environment in Windows, Linux and Mac.
+    category: Getting started
+    link: /learn/os_setup
+    pages:
+      - link: /learn/os_setup/choose_compiler
+      - link: /learn/os_setup/install_gfortran
+      - link: /learn/os_setup/install_opencoarrays
+      - link: /learn/os_setup/text_editors
+      - link: /learn/os_setup/ides
+      - link: /learn/os_setup/tips
+
 # Web links listed at the bottom of the 'Learn' landing page
 #
 reference-links:
