Add electronic structure packages to index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -149,6 +149,25 @@
   tags: sql database
   license: MIT
 
+- name: mpifx
+  github: dftbplus/mpifx
+  description: Modern Fortran wrappers around MPI routines
+  categories: interfaces
+  tags: mpi fypp
+
+- name: scalapackfx
+  github: dftbplus/scalapackfx
+  description: Modern Fortran wrappers around ScaLAPACK routines
+  categories: interfaces
+  tags: mpi fypp pblas blacs
+
+- name: ELSI
+  url: https://gitlab.com/elsi_project/elsi_interface
+  description: A software interface designed for electronic structure codes to connect with ELPA, libOMM, PEXSI, EigenExa, SLEPc, NTPoly, BSEPACK, LAPACK, MAGMA, and other solver libraries.
+  categories: interfaces
+  tags: electronic-stucture mpi gpu
+  version: 2.6.0
+  license: BSD-3-Clause
 
 # --- Programming utilities ---
 
@@ -301,11 +320,24 @@
 
 # --- File input / output ---
 
+- name: atomsk
+  github: pierrehirel/atomsk
+  description: A Tool For Manipulating And Converting Atomic Data Files
+  categories: io
+  tags: file-formats
+
+- name: FortJSON
+  url: https://gitlab.com/elsi_project/fortjson
+  description: A JSON library designed with portability across HPC architectures in mind
+  categories: io
+  tags: json hpc
+  license: BSD-3-Clause
+
 - name: json-fortran
   github: jacobwilliams/json-fortran
   description: A Fortran 2008 JSON API
   categories: io
-  tags: json io
+  tags: json
   license: BSD-3-Clause
 
 - name: VTKFortran
@@ -597,6 +629,47 @@
   license: GPL-3.0
   version: none
 
+- name: libnegf
+  github: libnegf/libnegf
+  description: A general library for Non Equilibrium Green's Functions
+  categories: numerical
+  tags: transport electronic-structure
+  license: LGPL-3.0
+
+- name: ddPCM
+  github: filippolipparini/ddPCM
+  description: A fast domain decomposition based implementation of the COSMO solvation model
+  categories: numerical
+  tags: continuum-solvation cosmo pcm cpcm
+
+- name: PoisFFT
+  github: LadaF/PoisFFT
+  description: Library to solve Poisson equation on a uniform Cartesian grid using the Fast Fourier Transform
+  categories: numerical
+  tags: fft poisson
+  license: GPL-2.0
+
+- name: ELPA
+  url: https://gitlab.mpcdf.mpg.de/elpa/elpa
+  description: Eigenvalue Solvers for Petaflop Applications
+  categories: numerical
+  tags: mpi gpu
+  version: 2020.05.001
+  license: LGPL-3.0
+
+- name: NTPoly
+  github: william-dawson
+  description: A massively parallel library for computing the functions of sparse matrices.
+  categories: numerical
+  tags: mpi
+
+- name: QMD-PROGRESS
+  github: lanl/qmd-progress
+  description: Parallel, Rapid O(N) and Graph-based Recursive Electronic Structure Solver.
+  categories: numerical
+  tags: mpi
+  license: BSD-3-Clause
+
 # --- Scientific codes ---
 
 - name: "DFTB+"
@@ -788,3 +861,28 @@
   tags: equation parser
   version: none
   license: Apache2.0
+
+- name: HANDE
+  github: hande-qmc/hande
+  description: Open source stochastic quantum chemistry
+  categories: numerical scientific
+  tags: qmc electronic-structure
+
+- name: OpenMolcas
+  url: https://gitlab.com/Molcas/OpenMolcas
+  description: Quantum chemistry software package for multiconfigurational approaches to the electronic structure
+  categories: scientific
+  tags: electronic-structure casscf caspt2
+  license: LGPL-2.1
+
+- name: DFT-D4
+  github: dftd4/dftd4
+  description: A Generally Applicable Atomic-Charge Dependent London Dispersion Correction
+  categories: scientific
+  tags: dft-d dispersion-correction
+
+- name: libmbd
+  github: jhrmnn/libmbd
+  description: Many-body dispersion library
+  categories: scientific
+  tags: dispersion-correction
