Fix version numbers not displayed correctly

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -154,12 +154,14 @@
   description: Modern Fortran wrappers around MPI routines
   categories: interfaces
   tags: mpi fypp
+  version: none
 
 - name: scalapackfx
   github: dftbplus/scalapackfx
   description: Modern Fortran wrappers around ScaLAPACK routines
   categories: interfaces
   tags: mpi fypp pblas blacs
+  version: none
 
 - name: ELSI
   url: https://gitlab.com/elsi_project/elsi_interface
@@ -538,6 +540,7 @@
   categories: numerical
   tags: eigenvalue eigenvector singular value decomposition svd
   license: BSD-3-Clause
+  version: none
 
 - name: neural-fortran
   github: modern-fortran/neural-fortran
@@ -635,6 +638,7 @@
   categories: numerical
   tags: transport electronic-structure
   license: LGPL-3.0
+  version: none
 
 - name: ddPCM
   github: filippolipparini/ddPCM
@@ -648,6 +652,7 @@
   categories: numerical
   tags: fft poisson
   license: GPL-2.0
+  version: none
 
 - name: ELPA
   url: https://gitlab.mpcdf.mpg.de/elpa/elpa
@@ -658,7 +663,7 @@
   license: LGPL-3.0
 
 - name: NTPoly
-  github: william-dawson
+  github: william-dawson/ntpoly
   description: A massively parallel library for computing the functions of sparse matrices.
   categories: numerical
   tags: mpi
@@ -815,6 +820,7 @@
   description: The Maximally-Localised Generalised Wannier Functions Code
   categories: scientific
   tags: electronic-structure
+  version: none
 
 - name: WHIZARD
   url: https://whizard.hepforge.org/
@@ -867,6 +873,7 @@
   description: Open source stochastic quantum chemistry
   categories: numerical scientific
   tags: qmc electronic-structure
+  version: none
 
 - name: OpenMolcas
   url: https://gitlab.com/Molcas/OpenMolcas
