Fix PSBLAS github address mistake

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -604,7 +604,7 @@
   tags: linear algebra parallel mpi openmp cuda hip
 
 - name: PSBLAS
-  github: sfillipone/psblas3
+  github: sfilippone/psblas3
   description: Parallel Sparse BLAS
   categories: numerical data-types
   tags: linear algebra mpi
