Update package index
- add octopus (https://gitlab.com/octopus-code/octopus)
- remove version tag from atomsk
- add version tag to libnegf

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -334,6 +334,7 @@
   description: A Tool For Manipulating And Converting Atomic Data Files
   categories: io
   tags: file-formats
+  version: none
 
 - name: FortJSON
   url: https://gitlab.com/elsi_project/fortjson
@@ -651,7 +652,6 @@
   categories: numerical
   tags: transport electronic-structure
   license: LGPL-3.0
-  version: none
 
 - name: ddPCM
   github: filippolipparini/ddPCM
@@ -894,6 +894,13 @@
   categories: scientific
   tags: electronic-structure casscf caspt2
   license: LGPL-2.1
+
+- name:
+  url: https://gitlab.com/octopus-code/octopus
+  description: Real-space Time-Dependent Density Functional Theory code
+  categories: scientific
+  tags: electronic-structure
+  license: GPL-2.0
 
 - name: DFT-D4
   github: dftd4/dftd4
